# erudios

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 0004_add_chat_tables.py
backend/app/: config.py  main.py
backend/app/api/v1/: analytics.py  artifacts.py  auth.py  chat.py  curriculum.py  graph.py  health.py  intelligence.py  progress.py  recommendations.py  resources.py  router.py  topics.py
backend/app/core/: exceptions.py  logging.py  metrics.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/models/: __init__.py  artifact.py  chat.py  concept_mastery.py  content.py  curriculum.py  progress.py  provider.py  quiz_attempt.py  resource.py  resource_feedback.py  topic.py  user.py
backend/app/modules/artifacts/: service.py
backend/app/modules/curriculum/: service.py
backend/app/modules/intelligence/: service.py
backend/app/modules/mastery/: analytics.py  engine.py  service.py
backend/app/modules/rag/: __init__.py  indexer.py  service.py
backend/app/modules/recommendation/: service.py
backend/app/modules/research/: feedback.py  ranker.py
backend/app/modules/topic_graph/: graph_formatter.py  seed_loader.py  service.py
backend/app/providers/embeddings/: __init__.py  base.py  huggingface.py  qdrant_store.py
backend/app/providers/llms/: base.py  budget.py  gemini.py  groq.py  huggingface.py  router.py
backend/app/schemas/: __init__.py  artifact.py  chat.py  curriculum.py  progress.py  resource.py  topic.py  user.py
backend/app/services/: cache.py  content_cache.py
backend/app/workers/: enqueue.py  settings.py
backend/seed/: ai_taxonomy.json  dependency_graph.json  trusted_sources.json
backend/tests/: conftest.py  test_integration.py
backend/tests/unit/: test_artifact_service.py  test_budget_tracker.py  test_mastery_engine.py  test_recommendation_service.py  test_resource_ranker.py
frontend/: Dockerfile  (+3 more)
(+45 files in other folders)
