[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erudios-backend"
version = "0.1.0"
description = "Erudios — AI Curriculum Builder Backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
    "httpx>=0.28.0",

    # Caching
    "redis>=5.2.0",
    "hiredis>=3.0.0",

    # LLM providers
    "google-generativeai>=0.8.0",
    "groq>=0.13.0",
    "huggingface-hub>=0.26.0",
    "openai>=1.56.0",  # Used for OpenRouter compatibility

    # Embeddings & vector DB
    "sentence-transformers>=3.3.0",
    "qdrant-client>=1.12.0",

    # Web scraping & search
    "crawl4ai>=0.4.0",
    "duckduckgo-search>=7.0.0",
    "tavily-python>=0.5.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "aiohttp>=3.11.0",
    "python-slugify>=8.0.4",
    "arrow>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B905"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
